--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,16 @@ jobs:
       - run:
           name: npm install
           working_directory: ./backend
-          command: ls -la && npm install
+          command: 
+            export TYPEORM_HOST=udacity-devops-ducpdd.cgscfam5qreo.us-east-1.rds.amazonaws.com
+            echo "$TYPEORM_HOST"
+            echo "$TYPEORM_CONNECTION"
+            TYPEORM_HOST  > .env
+            TYPEORM_CONNECTION > .env
+            TYPEORM_ENTITIES > .env
+            TYPEORM_HOST > .env
+            cat .env
+            ls -la && npm install
       - persist_to_workspace:
           root: .
           paths:
@@ -343,6 +352,13 @@ jobs:
           working_directory: ./backend
           command: |
             export TYPEORM_HOST=udacity-devops-ducpdd.cgscfam5qreo.us-east-1.rds.amazonaws.com
+            echo "$TYPEORM_HOST"
+            echo "$TYPEORM_CONNECTION"
+            TYPEORM_HOST  > .env
+            TYPEORM_CONNECTION > .env
+            TYPEORM_ENTITIES > .env
+            TYPEORM_HOST > .env
+            cat .env
             npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to kvdb
