--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,6 +59,7 @@ jobs:
           name: npm install
           working_directory: ./backend
           command: |
+            env > .env
             cat .env
             ls -la && npm install
       - persist_to_workspace:
